FIX(styles.css): change scores_heading colour for greater contrast

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -399,7 +399,7 @@ form div.col {
 }
 
 .scores_heading {
-    color: hsl(273, 100%, 50%);
+    color: hsl(273, 100%, 70%);
     margin: 20px auto;
     text-align: center;
     font-size: 24px;
